# gemma-rover

./: .gitignore  .gitmodules  README.md  pyproject.toml  start_mars_simulation.py
actions/: 1_pick_up_scoop.py  2_drop_scoop.py  3_pick_up_dirt.py  4_drop_dirt.py  5_pick_up_cloth.py  6_drop_cloth.py  7_wipe_solar.py
base/: actions_test.py  control_loop.py  control_loop_old.py  do_task.py  evaluate.py  lerobot_task_handler.py  llm_test.py  move_to_drop_zone.py  navigation.py  rover_state.py  teleoperate.py  test_bar_code.py  test_move.py
train_utils/: record.py  teleoperate.py
